fix: sticky nav only on desktop, fix: close collapse while navigating.

--- a/src/app/shell/header/header.component.scss
+++ b/src/app/shell/header/header.component.scss
@@ -1,18 +1,26 @@
 @import "src/theme/theme-variables";
 
-.navbar {
-  margin-bottom: $spacer;
-  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
-  -moz-transition: -moz-transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
-  transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+@media (min-width: 992px) {
+  .navbar {
+    -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+    -moz-transition: -moz-transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+    transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+  }
+
+  .navbar.hidden {
+    -webkit-transform: translateY(-100%);
+    -moz-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    -o-transform: translateY(-100%);
+    transform: translateY(-100%);
+  }
 }
 
-.navbar.hidden {
-  -webkit-transform: translateY(-100%);
-  -moz-transform: translateY(-100%);
-  -ms-transform: translateY(-100%);
-  -o-transform: translateY(-100%);
-  transform: translateY(-100%);
+@media (max-width: 991px) {
+  .nav-link {
+    display: block;
+    padding: 0.1rem 0rem;
+  }
 }
 
 .nav-link.dropdown-toggle {
